--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -3,9 +3,10 @@
         
 
         <div id="articles">
-            <article class="article-item article-detalle">
+            <article class="article-item article-detalle" *ngIf="article">
                 <div class="image-wrap">
-                    <img src="{{url + 'get-image/' + article.image}}" alt="{{article.title}}">
+                    <img src="{{url + 'get-image/' + article.image}}" alt="{{article.title}}" *ngIf="article.image">
+                    <img src="assets/images/default.png" alt="{{article.title}}" *ngIf="!article.image">
                 </div>
                 <div>
                     <h1 class="subheader">{{article.title}}</h1>
