--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -3,6 +3,10 @@
     Cargando...
 </div>
 
+<div class="loading" *ngIf="articles && articles.length == 0">
+    No hay articulos para mostrar, inténtalo más tarde
+</div>
+
 <div id="articles" *ngIf="articles">
     <article class="article-item" *ngFor="let article of articles">
         <div class="image-wrap">
