--- a/src/app/components/article-new/article-new.component.html
+++ b/src/app/components/article-new/article-new.component.html
@@ -2,7 +2,7 @@
 
 <div class="center">
     <section id="content">
-        <h2 class="subheader">Crear Articulo</h2>
+        <h2 class="subheader">{{page_title}}</h2>
 
         <form class="mid-form" #articleForm="ngForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
@@ -23,6 +23,11 @@
             </div>
             <div class="form-group">
                 <label for="image">Imagen</label>
+
+                <div *ngIf="is_edit" class="image-thumb">
+                    <img src="{{url + 'get-image/' + article.image}}" alt="{{article.title}}" *ngIf="article.image">
+                    <img src="assets/images/default.png" alt="{{article.title}}" *ngIf="!article.image">
+                </div>
                 <!-- 
                     [config]="afuConfig"  -> Archivo de configuracion
                     (ApiResponse)="docUpload($event)" -> cuando la API recoga el fichero y lo guarde, lanzas ese evento. Modifico la API para que el parametro del id sea opcional
