--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -285,6 +285,10 @@ textarea{
     margin-bottom: 10px;
 }
 
+.image-thumb img{
+    width: 150px;
+}
+
 #footer{
     background-color: #f7f7f7;
     width: 100%;
